Add security and roles