@@ -1,18 +1,15 @@
 package com.vterroso.carregistry.controller;
 
-import com.vterroso.carregistry.controller.dto.CarDTO;
 import com.vterroso.carregistry.controller.dto.CarWithBrandDTO;
 import com.vterroso.carregistry.controller.mapper.CarMapper;
 import com.vterroso.carregistry.service.CarService;
 import com.vterroso.carregistry.service.model.Car;
 import lombok.RequiredArgsConstructor;
 import org.springframework.http.ResponseEntity;
+import org.springframework.security.access.prepost.PreAuthorize;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
-import java.util.concurrent.CompletableFuture;
-import java.util.concurrent.ExecutionException;
-import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/cars")
@@ -22,18 +19,23 @@ public class CarController {
     private final CarService carService;
     private final CarMapper carMapper;
 
-
     @GetMapping
-    public CompletableFuture<ResponseEntity<List<CarWithBrandDTO>>> getAllCars() {
-        return carService.getAllCars().thenApply(cars -> {
+    @PreAuthorize("hasAnyRole('CLIENT', 'VENDOR')")
+    public ResponseEntity<?> getAllCars() {
+        try {
+            List<Car> cars = carService.getAllCars();
             List<CarWithBrandDTO> carWithBrandDTOs = cars.stream()
                     .map(carMapper::carToCarWithBrandDTO)
-                    .collect(Collectors.toList());
+                    .toList();
             return ResponseEntity.ok(carWithBrandDTOs);
-        });
+        } catch (Exception e) {
+            return ResponseEntity.notFound().build();
+
+        }
     }
 
     @GetMapping("/{id}")
+    @PreAuthorize("hasAnyRole('CLIENT', 'VENDOR')")
     public ResponseEntity<CarWithBrandDTO> getCarById(@PathVariable Integer id) {
         return carService.getCarById(id)
                 .map(car -> ResponseEntity.ok(carMapper.carToCarWithBrandDTO(car)))
@@ -41,14 +43,20 @@ public class CarController {
     }
 
     @PostMapping
-    public ResponseEntity<CarWithBrandDTO> createCar(@RequestBody CarDTO carDTO) {
-        Car car = carMapper.INSTANCE.carDTOToCar(carDTO);
-        Car savedCar = carService.addCar(car);
-        CarWithBrandDTO savedCarWithBrandDTO = carMapper.carToCarWithBrandDTO(savedCar);
-        return ResponseEntity.ok(savedCarWithBrandDTO);
+    @PreAuthorize("hasRole('VENDOR')")
+    public ResponseEntity<CarWithBrandDTO> createCar(@RequestBody CarWithBrandDTO carWithBrandDTO) {
+        try {
+            Car car = carMapper.carWithBrandDTOToCar(carWithBrandDTO);
+            Car savedCar = carService.addCar(car);
+            CarWithBrandDTO savedCarWithBrandDTO = carMapper.carToCarWithBrandDTO(savedCar);
+            return ResponseEntity.ok(savedCarWithBrandDTO);
+        } catch (IllegalArgumentException e) {
+            return ResponseEntity.badRequest().body(null);
+        }
     }
 
     @PutMapping("/{id}")
+    @PreAuthorize("hasRole('VENDOR')")
     public ResponseEntity<CarWithBrandDTO> updateCar(@PathVariable Integer id, @RequestBody CarWithBrandDTO carWithBrandDTO) {
         Car car = carMapper.carWithBrandDTOToCar(carWithBrandDTO);
         return carService.updateCar(id, car)
@@ -57,6 +65,7 @@ public class CarController {
     }
 
     @DeleteMapping("/{id}")
+    @PreAuthorize("hasRole('VENDOR')")
     public ResponseEntity<Void> deleteCar(@PathVariable Integer id) {
         carService.deleteCar(id);
         return ResponseEntity.noContent().build();
